# AiDegree

./: LICENSE  README.md  pyproject.toml
aidegree/: pandas_learn.py
aidegree/sem1/week1_python_math/lesson2/: matplotlib_exercises.ipynb  numpy_exercises.ipynb  numpy_exercises_2.ipynb  pandas_exercises.ipynb  pandas_learn_notes.ipynb  pandas_mini_cheatsheet_examples.ipynb  vectorization_vs_broadcasting.ipynb
